# WRS-TDRRC-2020

./: CMakeLists.txt  README.md
model/: BaseA-50.body  Capsule20x100-S.body  Capsule20x100.body  Dynamite80mm.body  I-50-2.0-Red-F.body  I-50-2.0-Red.body  JetFan2020.body  JungleGymM0.body  JungleGymM2-S.body  L-50-2.0-4.0-Blue-F.body  L-50-2.0-4.0-Blue-S.body  L-50-2.0-4.0-Blue.body  Obstacle-L25-Gray-F.body  Obstacle-L25-Gray-S.body  Obstacle-L25-Gray.body  Obstacle-L25-Green.body  Obstacle-L25-Purple.body  Obstacle-L25-Red-F.body  Obstacle-L25-Red-S.body  Obstacle-L25-Red.body  Obstacle-L50-Blue-F.body  Obstacle-L50-Blue-S.body  Obstacle-L50-Blue.body  Obstacle-L50-Yellow.body  RoadSurface40m_TS2-F.body  RoadSurface40m_TS2-S.body  RoadSurface40m_TS2.body  TargetTS4_5-50-1-L1.body  TargetTS4_5-50-1-L2.body  TargetTS4_5-50-1-L3.body  TargetTS4_5-50-1-L4.body  TargetTS4_5-50-1-U1.body  TargetTS4_5-50-1-U2.body  TargetTS4_5-50-1-U3.body  TargetTS4_5-50-1-U4.body  TargetTS4_5-50-2-L1.body  TargetTS4_5-50-2-L2.body  TargetTS4_5-50-2-L3.body  TargetTS4_5-50-2-L4.body  TargetTS4_5-50-2-U1.body  (+40 more)
project/: SG1L.cnoid  SG1M.cnoid  SG2.cnoid  TS1-Final.cnoid  TS1-Pre.cnoid  TS1-Semi.cnoid  TS1-Target_Location.txt  TS1.cnoid  TS2-D-TEST.cnoid  TS2-Final.cnoid  TS2-Pre.cnoid  TS2-Semi.cnoid  TS2.cnoid  TS3-Final.cnoid  TS3-Pre.cnoid  TS3-Semi.cnoid  TS3.cnoid  TS4-Final.cnoid  TS4-JETFAN-TARGET-NAME-CONVERTING-TABLE.txt  TS4-Pre.cnoid  TS4-Semi.cnoid  TS4.cnoid
script/: CMakeCache.txt  TS1-AizuSpiderSA-ROS.py  TS1-AizuSpiderSA.py  TS1-AizuSpiderSS-ROS.py  TS1-AizuSpiderSS.py  (+175 more)
(+49 files in other folders)
